--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@elevenlabs/elevenlabs-js": "^2.16.0",
+    "@google-cloud/text-to-speech": "^6.3.0",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.1.1",
+    "googleapis": "^160.0.0",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "axios": "^1.5.0",
+    "say": "^0.16.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
